# abCMS

./: .gitignore  .init.lua  ARCH.MD  AUTHENTICATION.md  CLAUDE.md  DEPENDENCIES.md  IDEAS.MD  IMPLEMENTATION_SUMMARY.md  PROTECTED_ROUTES_GUIDE.md  README.MD  README.md  TEST_AUTHENTICATION.sh  abcms-dev-1.rockspec  api.py  app.lua  app.moon  auth.py  blog.py  config.lua  config.moon  cookies.txt  cozy.py  deployment.py  fileinterface.py  install_lua.sh  linux_build.sh  linux_buildnrun.sh  main.py  migrate.py  migrations.lua  migrations.moon  nginx.conf  nginx.conf.compiled  postcard.html  pyproject.toml  pyrightconfig.json  requirements.txt  sandbox.py  setup.py  setup.sh  (+4 more)
applications/: blog.lua  blog.moon  protected.lua  protected.moon
backend/: api.py  auth.py  blog.py  deployment.py  filestructure.txt  kube.py  linux_build.sh  notkube.py  pyproject.toml  reqirements.txt  userroutes.py
filestore/: abcms.conf  asd.md
for_reference/: .init.lua  README.md  api.py  auth.py  blog.py  fileinterface.py  install_lua.sh  linux_buildnrun.sh  pyproject.toml  pyrightconfig.json  setup.sh  userroutes.py
frontend/: admin.html  index.html  styles.css
lib/: auth.lua  auth.moon  file_utils.lua  file_utils.moon
models/: posts.lua  posts.moon  users.lua  users.moon
resources/: admin.html  auth.html  confirm-card.html  cozy.css  cozy.html  cozypost.html  dashboard-sect.html  html.html  htmx-ext-sse.js  imgcard.html  imgdashboard-sect.html  imgpost.html  index.html  post.html  postcard.html  script.js  settingscozy.html  styles.css  userpostlistcard.html
views/: 404.lua  (+17 more)
(+19 files in other folders)
